--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,18 +129,64 @@ section {
 # Back to top button
 --------------------------------------------------------------*/
 .buttonregister {
-  background-color: #4CAF50; /* Green */
+  background-color: #01215D; /* Green */
+  border: none;
+  color: white;
+  padding: 22px 64px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.buttonregister:hover {
+  background-color: #4CAF50;
+  color: white;
+  border: 3px solid #4CAF50;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.buttonregister1 {
+  background-color: #01215D; /* Green */
   border: none;
   color: white;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  border-radius: 6px;
+  border-radius: 10px;
+}
+.buttonregister1:hover {
+  background-color: #4CAF50;
+  color: white;
+  border: 10px solid #4CAF50;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.buttonregister2 {
+  background-color: #01215D; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.buttonregister2:hover {
+  background-color: #4CAF50;
+  color: white;
+  border: 6px solid #4CAF50;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .buttonreg1 {
