--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,9 @@ a {
 }
 
 a:hover {
-  color: #01215d;
+  color: #3498db;
   text-decoration: none;
+  cursor:pointer;
 }
 
 h1,
@@ -172,20 +173,20 @@ section {
   background-color: #01215D; /* Green */
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding: 12px 24px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 25px;
+  font-size: 15px;
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .buttonregister2:hover {
   background-color: #4CAF50;
   color: white;
-  border: 6px solid #4CAF50;
+  border: 3px solid #4CAF50;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
@@ -1461,21 +1462,21 @@ section {
 }
 
 .testimonials .swiper-slide {
-  opacity: 0.3;
+  
 }
 
-@media (max-width: 1199px) {
+@media (max-width: 699px) {
   .testimonials .swiper-slide-active {
-    opacity: 1;
+   
   }
   .testimonials .swiper-pagination {
     margin-top: 0;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 720px) {
   .testimonials .swiper-slide-next {
-    opacity: 1;
+    
     transform: scale(1.12);
   }
 }
@@ -1509,15 +1510,15 @@ section {
   bottom: 0;
   height: 100%;
   width: 100%;
-  background: url(../img/team-shape.svg) no-repeat center bottom;
+  
   background-size: contain;
   z-index: 1;
 }
 
 .team .member .social {
   position: absolute;
-  right: -100%;
-  top: 30px;
+  right: 100%;
+  top: 50px;
   opacity: 0;
   border-radius: 4px;
   transition: 0.5s;
